# pokeplatinum

include/: enc_effects.h  map_object.h  map_tile_behavior.h  scrcmd.h
include/battle/: rodata_ov16_0226F6AC.h
include/constants/: follow_mon_idx.h
include/constants/field/: map_tile_behaviors.h
include/overlay005/: encounter_effect.h  encounter_effect_core.h  linear_interpolation_task_s32.h
res/: pl_font.narc
res/fonts/: font_subscreen.json
res/graphics/windows/: meson.build
res/prebuilt/battle/graphic/: pl_b_plist_gra.narc  pl_batt_bg.narc  pl_batt_obj.narc
res/prebuilt/data/mmodel/: fldeff.narc
res/prebuilt/data/mmodel/mmodel/: meson.build
res/prebuilt/graphic/: field_encounteffect.narc
res/prebuilt/poketool/trgra/: trbgra.narc
res/sound/: meson.build
res/trainers/classes/: meson.build
src/: enc_effects.c  field_battle_data_transfer.c  field_map_change.c  map_tile_behavior.c  meson.build  scrcmd.c  unk_0205F180.c
src/battle/: battle_controller.c  battle_cursor.c  battle_display.c  ov16_0226871C.c
src/overlay005/: encounter_effect.c  encounter_effect_core.c  map_name_popup.c  ov5_021D431C.c  ov5_021DC018.c  ov5_021DC018.c.bak  ov5_021DD6FC.c
src/overlay011/: ov11_0221F800.c
